Add lazy quantifier to aspectResourcePath regex (maven plugin config property)